--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -102,7 +102,7 @@ Data will be submitted to Dryad upon publication.
     In many biological systems, interactions between system elements (be these species, individuals etc.) affect performance and together determine the dynamics of the whole system. In order to understand system dynamics when multiple system elements are involved, such complex systems can be represented as networks where the elements are nodes and linked by interactions \parencite{Pimm1978}. These nodes can take on a wide array of identities, including cells, individuals, populations or species. Likewise, interactions or links can operate via many different mechanisms and have a wide range of effects on the nodes. Biological networks have been observed to typically differ from randomly-assembled networks in important and varied ways, thus informing us on the biological processes structuring these systems \parencite{Dunne2002, Kinlock2019}.
 
     \paragraph{}
-    Network theory has been widely applied to investigate the structure of biological systems such as food webs and other types of multi-level ecological interaction networks. There is now a rich body of work describing the structural properties of food webs, plant-pollinator networks, and host-parasite interactions (e.g. \cite{Lafferty2008, Thompson2012, Dunne2013, Stouffer2014, Cirtwill2015a}). Horizontal networks however, where interactions occur within the same level of organisation (for example interactions between plants belonging to the same food web) have been more neglected by network ecology \parencite{Ellison2019}. These elements and their interactions have been found to alter the structure, stability and diversity-functioning relationships of the whole multi-level system \parencite{Hammill2015, Giling2019, Zhao2019, Miele2019}, which makes integrating horizontal and vertical networks a key challenge in improving our understanding of system dynamics and persistence \parencite{Godoy2018c}.
+    Network theory has been widely applied to investigate the structure of biological systems such as food webs and other types of multi-level ecological interaction networks. Because network theory can be used to characterise diversity, stability and other community-level properties emerging from species interactions, it has had a long and meaningful impact on our understanding of ecological communities. There is now a rich body of work describing the structural properties of food webs, plant-pollinator networks, and host-parasite interactions (e.g. \cite{Lafferty2008, Thompson2012, Dunne2013, Stouffer2014, Cirtwill2015a}). Horizontal networks however, where interactions occur within the same level of organisation (for example interactions between plants belonging to the same food web) have been more neglected by network ecology \parencite{Ellison2019}. These elements and their interactions have been found to alter the structure, stability and diversity-functioning relationships of the whole multi-level system \parencite{Hammill2015, Giling2019, Zhao2019, Miele2019}, which makes integrating horizontal and vertical networks a key challenge in improving our understanding of system dynamics and persistence \parencite{Godoy2018c}.
 
     %\paragraph{} % I reckon this paragraph can be cut?? It doesn't bring that much to the intro... Can be kept for MEE
     %In many horizontal systems, interactions between nodes are not always easy to observe empirically and must instead be deduced through other means. One strategy is to look at associations between the nodes: nodes which are often found together are assumed to interact more strongly than nodes which rarely co-occur (e.g. \cite{Araujo2011}). This approach benefits from a wide range of packages available in R, requires fairly simple data (presence/absence of the nodes) and can be used to deduce associations between large numbers of nodes. An important drawback remains: association networks cannot always distinguish between the multiple confounding factors which lead to co-occurrence, and in ecological communities little evidence supports their use as a proxy for interactions \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
@@ -115,8 +115,7 @@ Data will be submitted to Dryad upon publication.
     \paragraph{} 
     We present a general framework to estimate interactions in highly diverse systems using Bayesian parameter estimation methods which....... We specify a joint model which allows us to estimate both realised and unrealised interactions, the latter being conditioned on the former. Using annual wildflower community data in Western Australia consisting of 22 focal species and up to 52 neighbouring species, we illustrate how this novel framework can be applied by couching the resulting interactions into established models of population dynamics. This allows us to account for other demographic processes affecting species performance, as well as translate interaction effects on the measured variable into effects on another variable of interest. We further show the benefits of this ... approach by comparing a range of findings on our test natural system derived from a spatial - abundance association network [I don't like this!!], and suggest potential applications in species management and conservation that make use of the rich information provided by species interaction networks.
 
-    % \paragraph{}
-    % Measuring non-trophic relationships in plant communities is difficult, in part because they cannot be directly observed as in food webs or other interaction networks, and must instead be inferred by other means. Arguably the most common approach to empirically quantifying interactions between a focal species and others involves measuring the effects of neighbours on a proxy for lifetime reproductive success (e.g. fecundity, growth rate) \parencite{Connell1961, Grace1990}. This can be done for example by growing focal species with neighbours of different identities and at varying densities, in the field or laboratory. The resulting phenomenological interaction strengths are not dependant on any specific mechanism and can be directly linked to changes in species abundances through the use of population dynamic models, for example with the Beverton-Holt model \parencite{Beverton1957, Levine2009}). This approach has been widely applied and has greatly improved our understanding of competition and its effects on biodiversity \parencite{Tilman1982, Chesson2000b, Levine2008, Adler2010, Mayfield2010a, Kraft2015} but remains limited to investigating interactions between few species, rather than a diverse community. The reason is two-fold: applying this method to a large number of species requires both large amounts of data and replication, as well as complex models which can be difficult to implement and run the danger of over-parameterisation. 
+
 
 \section{Methods}
 
@@ -232,11 +231,10 @@ After estimating interactions, they can be integrated into models of population 
 
         %----------------------------------
 
-% MAYBE MOVE MOST OF THE CASE STUDY STUFF TO APPENDIX??
 
     \section{Case study}
 
-        We applied the model framework described above to a case study of annual wildflower plants. After quantifying the interaction matrix, we scale all interaction samples using estimates of intrinsic fitness ($\beta_{i0}$) and experimentally-measured species demographic rates. The scaling is determined by a system-appropriate population dynamic model and allows us to translate the interaction matrix into per-capita effects on  abundance. This transformation places the resulting interaction strengths on the same scale and allows us to compare the community-wide effects of different species, amongst other potential applications further illustrated in the Results and Discussion. 
+       % We applied the model framework described above to a case study of annual wildflower plants. After quantifying the interaction matrix, we scale all interaction samples using estimates of intrinsic fitness ($\beta_{i0}$) and experimentally-measured species demographic rates. The scaling is determined by a system-appropriate population dynamic model and allows us to translate the interaction matrix into per-capita effects on  abundance. This transformation places the resulting interaction strengths on the same scale and allows us to compare the community-wide effects of different species, amongst other potential applications further illustrated in the Results and Discussion. 
         [IDK where this paragraph above shoud go??]
 
 We applied this framework to annual wildflower community dataset from Western Australia collected in 2016. This dataset contains observations of individual plant seed production from 22 different focal species, and the identity and abundance of all neighbouring individuals within a 3 to 5 cm radius of the focal individual. We used the framework to quantify interactions  between these 22 focal species and 53 neighbouring species, and derived per-capita interaction strengths with a well-supported population dynamics model for annual plants with a seed bank \citep{}. Further details on the data, the model fitting and the procedure for deriving scaled interactions from the population dynamics model are available in the Supplementary Methods.
@@ -325,14 +323,6 @@ I don't know where this goes - does it just repeat the methods? maybe reduce to 
     % We calculated .... 
 
 
-
-    % \begin{figure}[H]
-    %    % \hspace*{-3.5cm}
-    %     \includegraphics[width=\textwidth]{../../2020_Thesis/reviewer_comments/figures_for_oral_exam/intras_abundance_ch3.png}
-    %     \caption{POTENTIAL FIGURE - Relationship between species abundance and how much it regulates itself (strength of per-capita intraspecific interactions). }
-    %     \label{fig:aii_abund}
-    % \end{figure} 
-
     \begin{figure}[H]
         \begin{centering}
         \includegraphics[width=0.4\textwidth]{../2.analyses/figures_mss/species_effects.png}
@@ -367,15 +357,6 @@ I don't know where this goes - does it just repeat the methods? maybe reduce to 
     \paragraph{}
     Quantifying the matrix of per-capita interaction strengths between species in horizontal communities can also allow us to explore how the mechanisms maintaining diversity and stability operate in these systems and across a broad number of species. Self-regulation, for example, is an extremely important driver of community stability \parencite{Barabas2017} and arises from how individuals of the same species interact with one another. Whereas same-species effects cannot be estimated by association networks, our framework quantifies intraspecific interactions and allows us to measure the strength and prevalence of competitive and facilitative density-dependence. Measures of intra and interspecific interactions can also allow us to estimate niche overlap between species (for an example, see \cite{Chu2015a}): weak interactions between species suggests they are not sharing or competing for many resources, and occupy different niche spaces in the community. %Strong competitive self-regulation, and weak interactions between two species, are two of many mechanisms leading to stability and diversity in plant communities.
 
-    % Recent work suggests rare species are the prime emitters and beneficiaries of facilitative interactions, forming mutualistic refuges from competitive dominants \parencite{Calatayud2019, Hines2020}. Identifying neighbouring species which facilitate and increase the local abundance of rarer, endangered target species is...
-
-    %As another example, foundation species also control local biodiversity but are widely connected, locally abundant and hold a unique position in regards to their effects on community dynamics \parencite{Ellison2005, Baiser2013, Ellison2019}. Though it can take many years of careful study to identify foundation species from abundant species which are not as crucial to community structure, our framework can help distinguish species which are abundant and interact weakly with neighbours from common species which have strong competitive and facilitative effects on the community. 
-    %     % [The two species were \textit{Gilberta tenuifolia} and \textit{Haloragis odontocarpa} in case that's interesting.]
-
-
-    %         \paragraph{} % MOVED FROM RESULTS
-    % In addition to explicitely allowing for many species interactions, including both competitive (Figure \ref{fig:netwks}.A) and facilitative (Figure \ref{fig:netwks}.B) interactions is another feature which distinguishes our framework from traditional approaches to plant community ecology. Plant population dynamic models typically force interactions to be competitive, despite rising evidence that facilitation is common and an important driver of plant community dynamics \parencite{Brooker2008a}.
-
         \paragraph{}
         Another key feature of our model framework is the inclusion of facilitative interactions, which have long been disregarded in plant population models and theoretical frameworks of plant diversity-maintenance. The importance of facilitative interactions to community structure and patterns of abundance has long been recognised \parencite{Callaway1997a} but there is still little consensus on how they may affect biodiversity \parencite{Bruno2003, Brooker2008a}. Recent work suggests facilitation may be more widespread than expected \parencite{Gross2015, Picoche2020} and can  benefit species diversity and stability depending on the circumstances \parencite{Coyte2015, Brooker2008}. Our framework provides a means to investigate the prevalence and strength of facilitation across multiple species, and how it may act in relation to competition and species diversity.  
         
@@ -389,6 +370,7 @@ I don't know where this goes - does it just repeat the methods? maybe reduce to 
     % ie. improving our estimates \\
     % - improving our knowledge of networks, developing tools for plant networks and tools that can deal with non-sparse networks, competitive and facilitative interactions \\
     % - integrate with trophic networks (which appear to be sensitive to producer/plant network structure!)\\
+
    \subsection{Limitations}
 
 
@@ -404,13 +386,7 @@ I don't know where this goes - does it just repeat the methods? maybe reduce to 
 
     \paragraph{} 
     There is now a rich body of work describing the characteristics of food web, plant-pollinator and host-parasite interactions, but fewer network approaches focus on non-trophic interactions such as those occurring between plants \parencite{Ellison2019}. Here we present a novel framework which makes the process of inferring  interactions in horizontal systems easier, whilst allowing for many and multiple types (competitive and facilitative) of interactions. In turn, this allows the application of  network theory tools to the management of non-trophic systems, as well as to deepening our understanding of diversity, stability and other community-level properties which emerge from interactions. Though we illustrate our study with an ecological dataset, the method presented here could be adapted for use on a wider array of  horizontal systems such as those found in microbial, neural, and social networks. 
-
-%\paragraph{} 
- %Another approach to understanding diversity-maintenance comes from network theory, which represents an ecological community as a network of nodes or species with their interactions forming the links. This framework can include many species as well as multiple interaction types, and can be summarised by a suite of properties which describe how these species and interactions are organised. 
- % Because network theory can be used to characterise diversity, stability and other community-level properties emerging from species interactions, it has had a long and meaningful impact on our understanding of ecological communities. That said, this framework predominantly focuses on trophic webs (food web) and plant-pollinator or parasite-host systems (e.g. \cite{Lafferty2008, Thompson2012, Dunne2013, Stouffer2014, Cirtwill2015a}), with fewer methods developed for analysing the properties of horizontal communities like those of annual plant communities. 
- % Using network theory to understanding diversity-maintenance in these plant systems nonetheless presents a challenging but exciting opportunity to integrate multi-trophic and horizontal approaches to understanding the reality of species interactions and their dynamic effects on biodiversity and stability. 
-
-    
+   
 
 % \bibliography{../../../BibTex_files/03_Chapter3}
 % \bibliographystyle{plainnat}
